add custom copyright

--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -26,6 +26,8 @@ This footer template is shared across all the pages.
     </nav>
     <p class="m-footer-copyright">
       <span>{{@site.title}} &copy; {{date format="YYYY"}}</span>
+      <span>&nbsp; &bull; &nbsp;</span>
+      <span>All rights reserved.</span>
     </p>
   </div>
 </footer>
