--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -27,7 +27,7 @@ This footer template is shared across all the pages.
     <p class="m-footer-copyright">
       <span>{{@site.title}} &copy; {{date format="YYYY"}}</span>
       <span>&nbsp; &bull; &nbsp;</span>
-      <span>All rights reserved.</span>
+      <span>All rights reserved</span>
     </p>
   </div>
 </footer>
