--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -27,6 +27,7 @@
           <h2 class="m-article-card__title js-article-card-title {{#unless feature_image}}js-article-card-title-no-image{{/unless}}" title="{{title}}">
             {{title}}
           </h2>
+          <p>{{excerpt characters="140"}}</p>
         </div>
         <div class="m-article-card__timestamp">
           <span>{{date published_at timeago="true"}}</span>
